Add storage system; Add user system; Add overview for Wizard

--- a/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
+++ b/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Resources\Fonts\" />
+    <Folder Include="wwwroot\Resources\IconFonts\" />
   </ItemGroup>
 
 </Project>
