--- a/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
+++ b/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="BlazorDownloadFile" Version="2.4.0.2" />
+    <PackageReference Include="Blazored.Modal" Version="7.1.0" />
     <PackageReference Include="KristofferStrube.Blazor.FileSystem" Version="0.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
