--- a/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
+++ b/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" PrivateAssets="all" />
     <PackageReference Include="PdfSharpCore" Version="1.3.62" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
