--- a/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
+++ b/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="BlazorDownloadFile" Version="2.4.0.2" />
     <PackageReference Include="Blazored.Modal" Version="7.1.0" />
+    <PackageReference Include="ClipLazor" Version="2.1.0" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="KristofferStrube.Blazor.FileSystem" Version="0.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
