Improve action buttons on home page to be more accessible

--- a/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
+++ b/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PirateTools.Models\PirateTools.Models.csproj" />
+    <ProjectReference Include="..\PirateTools.Web.Common\PirateTools.Web.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
