--- a/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
+++ b/PirateTools.TravelExpense.WebApp/PirateTools.TravelExpense.WebApp.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\Sidebar\" />
     <Folder Include="wwwroot\Resources\Fonts\" />
     <Folder Include="wwwroot\Resources\IconFonts\" />
   </ItemGroup>
