--- a/PirateTools.Web.Common/PirateTools.Web.Common.csproj
+++ b/PirateTools.Web.Common/PirateTools.Web.Common.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\" />
+  </ItemGroup>
+
 </Project>
