--- a/PirateTools.Models/PirateTools.Models.csproj
+++ b/PirateTools.Models/PirateTools.Models.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="PdfSharpCore" Version="1.3.62" />
+  </ItemGroup>
+
 </Project>
