--- a/PirateTools.AskTheChairs.WebApp/Properties/launchSettings.json
+++ b/PirateTools.AskTheChairs.WebApp/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       },
       "dotnetRunMessages": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7218;http://localhost:5202"
+      "applicationUrl": "https://192.168.42.28:443;http://192.168.42.28:80"
     },
     "IIS Express": {
       "commandName": "IISExpress",
