--- a/PirateTools.Harbor/PirateTools.Harbor.csproj
+++ b/PirateTools.Harbor/PirateTools.Harbor.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PirateTools.Models\PirateTools.Models.csproj" />
   </ItemGroup>
 
