--- a/PirateTools.Harbor/Properties/launchSettings.json
+++ b/PirateTools.Harbor/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7063;http://localhost:5178"
+      "applicationUrl": "https://192.168.42.28:444;http://192.168.42.28:81"
     },
     "IIS Express": {
       "commandName": "IISExpress",
