--- a/PirateTools.Models/PirateTools.Models.csproj
+++ b/PirateTools.Models/PirateTools.Models.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PdfSharpCore" Version="1.3.62" />
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+    <PackageReference Include="PdfSharpCore" Version="1.3.63" />
   </ItemGroup>
 
 </Project>
